@@ -255,7 +255,7 @@ setup.soap <- function(bnd,knots,nmax=100,k=10,bndSpec=NULL) {
       bc[[i]] <- list(bsm=bsm,X=bsm$X[1:ret$nb[i],],S=bsm$S[[1]],free.bound=TRUE)
     } else { ## boundary is fixed
       ## pmax/pmin needed to avoid rounding error induced NA's
-      d <- pmin(pmax(ret$d[start:stop],max(bnd[[i]]$d)),min(bnd[[i]]$d)) 
+      d <- pmax(pmin(ret$d[start:stop],max(bnd[[i]]$d)),min(bnd[[i]]$d)) 
       ui <- !duplicated(bnd[[i]]$d)
       ff <- approx(bnd[[i]]$d[ui],bnd[[i]]$f[ui],d)$y ## fixed values for BC
       bc[[i]] <- list(f=ff,free.bound=FALSE)
